--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-
+  <div class="background"></div>
   <div class="container">
       <div class="logo">
         <img src="images/logo.svg" alt="">
